package org.fhtw.mytourapi.domain;

public enum ChildFriendlinessCategory {
    UNKNOWN,
    FAMILY_FRIENDLY,
    MODERATE_FAMILY_SUITABILITY,
    CHALLENGING_ROUTE,
    ADULT_ORIENTED
}
