package org.fhtw.mytourapi.domain;

public enum PopularityCategory {
    NEW,
    RARELY_USED,
    POPULAR,
    VERY_POPULAR
}
