package org.fhtw.mytourapi.domain;

public enum TransportType {
    BIKE,
    HIKE,
    RUNNING,
    VACATION
}
